--- a/index.html
+++ b/index.html
@@ -3,6 +3,88 @@
 <head>
 	<title>turn on</title>
 	<style type="text/css">
+	
+		header {
+			background-color: #00BFFF; /* #9933FF; */
+			padding-top: 20px;
+			padding-bottom: 0px;
+			margin-right: -8px;
+			margin-top: -15px;
+			margin-left: -8px;
+
+		}
+
+		header h1 {
+			text-align: center;
+			text-decoration: none;
+			font-family: Arial Black, sans-serif;
+			font-size: 40px;
+			border: 2px solid white;
+			border-radius: 6px;
+			width: 70px;
+			height: 58px;
+			margin-left: 50px;
+			color: white;
+		}
+		header p {
+			color: #FFF;
+			margin-left: 40px;
+		}
+
+		.nav li {
+			display: inline;
+			text-align: center;
+		}
+
+		.nav a {
+			color: white;
+			text-decoration: none;
+			margin-right: 15ex;
+			text-align: center;
+		}
+		.learnmore,.checkout, .about {
+			background-color: #F5F5F5;
+			width: 260px;
+			text-align: center;
+
+			border-bottom-right-radius: 10px;
+			border-bottom-left-radius: 10px;
+			padding-top: 10px;
+		}
+		.learnmore,.checkout,.about p {
+			width: 250px;
+			color: #34383D;
+		}
+
+		.learnmore a {
+			color: #5998F0;
+			text-decoration: none;
+			margin-left: -5px;
+		}													
+		/*
+			article {
+				border: 1px solid #dedede;
+				border-bottom: none;
+				border-left: none;
+				border-right: none;
+				width: 700px;
+			} */ 
+
+		footer {
+			background-color: #00BFFF;
+			color: white;
+			font-family: times, serif;
+			margin-left: -8px;
+			margin-right: -8px;
+			margin-bottom: 50px;
+			padding-left: 5px;
+
+		}
+		footer a {
+			font-family: Times, sans-serif;
+			font-size: 14px;
+			color: red;
+		}
 
 
 	</style>
